# Exam-cpp

./: CMakeLists.txt  GUI.cpp  GUI.h  Observer.h  Repository.cpp  Repository.h  Service.h  TableModel.cpp  TableModel.h  buildings.txt  domain.cpp  domain.h  ethnologists.txt  main.cpp
